fix swag spec for response for get rest menu
