# docs/swagger.json
@@ -49,10 +49,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/model.Menu"
-                            }
+                            "$ref": "#/definitions/response.MenuResponse"
                         }
                     },
                     "400": {
@@ -91,6 +88,17 @@
             "properties": {
                 "error": {
                     "type": "string"
+                }
+            }
+        },
+        "response.MenuResponse": {
+            "type": "object",
+            "properties": {
+                "menu": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.Menu"
+                    }
                 }
             }
         },
